[project]
name = "gaussian-cell-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "hdf5plugin",
    "jax",
    "magicgui",
    "napari[pyqt6]",
    "ruamel-yaml",
    "scikit-image",
    "tifffile",
    "torch",
    "zarr",
]

[dependency-groups]
dev = ["ipykernel", "ipython", "matplotlib", "ruff"]


[tool.ruff.lint]
select = ["I"]
